# News-Aggregator

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml  deploy.yml
backend/: .dockerignore  .env  .env.example  Dockerfile  main.py  news_aggregator.db  pyproject.toml  test_news_aggregator.db
backend/app/: main.py
backend/app/agents/: connection_agent.py  delivery_agent.py  feedback_processor_agent.py  graph.py  hunter_agent.py  output_formatter_agent.py  perspective_agent.py  state.py  synthesizer_agent.py  tracker_agent.py
backend/app/api/: deps.py
backend/app/api/routes/: alerts.py  auth.py  biases.py  digest.py  feedback.py  history.py  preferences.py
backend/app/core/: config.py  llm.py
backend/app/db/: crud.py  models.py  session.py
backend/app/schemas/: auth.py  digest.py  feedback.py  preferences.py
backend/app/services/: cache.py  digest_service.py  preference_service.py  rss_service.py  scheduler.py
backend/tests/: conftest.py  test_personas.py
backend/tests/test_agents/: test_hunter_agent.py
backend/tests/test_api/: test_phase2.py  test_preferences.py
backend/tests/test_services/: test_rss_service.py
frontend/: Dockerfile  nginx.conf  package-lock.json
frontend/src/: App.tsx  index.css
frontend/src/api/: auth.ts  client.ts  digest.ts  feedback.ts  history.ts  preferences.ts
frontend/src/components/: ArticleCard.tsx  BiasIndicator.tsx  Layout.tsx  ProtectedRoute.tsx  ReadingTimeBadge.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: Articles.tsx  Dashboard.tsx  (+3 more)
