[project]
name = "news-aggregator-backend"
version = "0.1.0"
description = "Personalized News Aggregator Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "apscheduler>=3.11.2",
    "beautifulsoup4>=4.15.0",
    "fastapi>=0.138.0",
    "feedparser>=6.0.12",
    "greenlet>=3.5.2",
    "httpx>=0.28.1",
    "langchain>=1.3.10",
    "langchain-community>=0.4.2",
    "langgraph>=1.2.6",
    "lxml>=6.1.1",
    "newspaper3k>=0.2.8",
    "openai>=2.43.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "redis>=8.0.0",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.49.0",
]
